test/good/strings/format02.px

x_x_ = true
s = "={x_x_}"
cc''' = '='
s += "{cc'''}{s}!"
print s
