test/bad/dictionaries/cmp02.px

{"a": true} != {"a": 0}
